fully tested audit controller